--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.10-slim
 RUN apt-get update && apt-get install -y tar && rm -rf /var/lib/apt/lists/*
 
 # структура как на VM
-RUN mkdir -p /opt/restoringvalues/{releases,current,run}
+RUN mkdir -p /opt/restoringvalues/releases /opt/restoringvalues/current /opt/restoringvalues/run
 RUN mkdir -p /opt/restoringvalues/run
 WORKDIR /opt/restoringvalues
 
